LOGCXX-136: DailyRollingFileAppender not using property options